[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log21"
authors = [
  {name = "CodeWriter21(Mehrad Pooryoussof)", email = "CodeWriter21@gmail.com"}
]
description = "A simple logging package that helps you log colorized messages in Windows console."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ['python', 'log', 'colorize', 'color', 'logging', 'Python3', 'CodeWriter21']
license = {text = "Apache License 2.0"}
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X"
]
dependencies = [
  "webcolors",
  "docstring-parser"
]
version = "2.8.0"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/MPCodeWriter21/log21"
Donations = "https://github.com/MPCodeWriter21/log21/blob/master/DONATE.md"
Source = "https://github.com/MPCodeWriter21/log21"

[project.optional-dependencies]
dev = ["yapf", "isort", "docformatter", "pylint", "json5", "pytest"]

[tool.pylint.messages_control]
max-line-length = 88

disable = [
  "too-few-public-methods",
  "too-many-arguments",
  "protected-access",
  "too-many-locals",
  "fixme",
]

[tool.pylint.design]
max-returns = 8

[tool.yapf]
column_limit = 88
split_before_dot = true
split_before_first_argument = true
dedent_closing_brackets = true

[tool.isort]
line_length = 88
combine_as_imports = true
order_by_type = true
